# Pinnacle

./: .gitignore  Makefile  PROJECT.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json
.github/: copilot-instructions.md
.github/prompts/: audit-task.prompt.md  create-adr-from-feature-idea.prompt.md  create-adr.prompt.md  create-task.prompt.md  execute-task.prompt.md  qa-handoff-checklist.prompt.md
.github/skills/analyst/: SKILL.md
.github/skills/analyst/assets/: decision-template.md  workflow-review-template.md
.github/skills/dev/: SKILL.md
.github/skills/qa/: SKILL.md
.github/skills/qa/assets/: bug-template.md  task-template.md
.github/workflows/: release.yml
backend/: Cargo.toml  tauri.conf.json
backend/capabilities/: default.json
backend/src/: lib.rs
backend/src/application/commands/: connection_commands.rs  elastic_commands.rs  mod.rs  query_commands.rs
backend/src/core/: error.rs
backend/src/domain/: connection.rs  export.rs  mod.rs  query.rs
backend/src/infrastructure/connectors/: elastic.rs  export.rs  keyring.rs  mod.rs  pool.rs  postgresql.rs  redis.rs  sql.rs  sqlite.rs  ssh.rs  ssl.rs  store.rs  transaction.rs
docs/: DATA_EXPLORER.md  MVP_ROADMAP.md  PROJECT_STRUCTURE.md  SYSTEM_ARCHITECTURE.md
frontend/: index.css  main.tsx
frontend/app/: providers.tsx  router.tsx  theme.tsx
frontend/features/_shared/: constants.ts  utils.ts
frontend/features/_shared/components/: ActionButton.tsx  CenteredLoadingState.tsx  ConnectionFormModal.tsx  ConnectionSidebar.tsx  ConnectionWizardModal.tsx  ContextMenu.tsx  CustomTitlebar.tsx  DeleteConnectionModal.tsx  DetailsPanel.tsx  Footer.tsx  (+6 more)
src/: index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/application/commands/: export_commands.rs  mod.rs  query_commands.rs  redis_commands.rs
src-tauri/src/core/: error.rs  result.rs
src-tauri/src/domain/: query.rs  redis.rs
src-tauri/src/infrastructure/connectors/: ddl.rs  mod.rs  postgresql.rs  sql.rs
src/app/: router.tsx  theme.tsx
src/features/data-explorer/: constants.ts  types.ts  utils.ts
src/features/home/: HomePage.tsx
src/features/settings/: SettingsPage.tsx
src/layouts/: AppShell.tsx
src/services/: tauriClient.ts
src/services/clients/: elasticsearch.ts  redis.ts  sql.ts
src/state/: designerStore.ts  shellLayoutStore.ts
src/types/: domain.ts  redis.ts  sql.ts
tasks/: task-008d-migrate-elasticsearch-components.md
tui/: Cargo.toml
(+216 files in other folders)
