[package]
name = "app"
version = "0.1.0"
description = "Pinnacle - Data Explorer for developers"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "postgres",
    "mysql",
    "chrono",
    "bigdecimal",
    "uuid",
] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
thiserror = "2"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
bigdecimal = "0.4.10"
uuid = { version = "1.20.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
csv = "1.3"
rust_xlsxwriter = "0.95"
tauri-plugin-dialog = "2"
redis = { version = "1.0.4", features = [
    "tokio-comp",
    "tokio-native-tls-comp",
] }
