[package]
name = "qmk-tui"
version = "0.1.0"
edition = "2021"
description = "QMK Firmware TUI - Rust rewrite with modern architecture"
authors = ["QMK Community"]
license = "GPL-2.0-only"
readme = "README.md"
repository = "https://github.com/qmk/qmk_firmware"

[dependencies]
# TUI framework
ratatui = "0.28"
crossterm = "0.28"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client for QMK API
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Image rendering (QR codes)
image = "0.25"
viuer = "0.7"

# Unicode support
unicode-width = "0.1"

# Directory paths
dirs = "5"

# Git operations
git2 = "0.19"

# Process execution
tokio-process = "1"

# Configuration
toml = "0.8"

# UUID for unique IDs
uuid = { version = "1", features = ["v4"] }

# Chrono for timestamps
chrono = "0.4"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true